--- a/css/forms.css
+++ b/css/forms.css
@@ -258,6 +258,7 @@ body:not(.smart) .stampaBtn{
 	padding-right:10px;
 	box-shadow:0px 0px 2px rgba(0,0,0,0.5);
 	cursor:pointer;
+	margin-top: 5px;
 }
 .p_sch_punto, /* procedura */
 .p_sch_tit, /* procedura */
