--- a/sets/meridiani_cinesi/stili.css
+++ b/sets/meridiani_cinesi/stili.css
@@ -777,3 +777,38 @@ body:not(.smart) #meridianiSmart_cont div:not(.elencoSel):hover{
 .only_meridiani_shiatsu{
 	display:none;
 }
+
+
+#add_pat{
+	padding-right:4px !important;
+}
+#pat_ricerca,
+#labelApparati{
+    width: calc(var(--menu-width) - 44px);
+}
+#labelApparati{
+	display: inline-block;
+    vertical-align: middle;
+    height: 26px;
+    line-height: 26px;
+    font-size: var(--font-17-6);
+    text-align: left;
+    padding-left: 6px;
+}
+#categoryBtn{
+    width: 28px;
+    height: 28px;
+	margin:1px;
+	display:inline-block;
+	vertical-align:middle;
+	cursor:pointer;
+	border-left:1px solid rgba(0,0,0,0.2);
+	background-position:center center;
+	background-repeat:no-repeat;
+}
+#add_pat.category #categoryBtn{
+	background-image:url(../../img/ico_list.png);
+}
+#add_pat:not(.category) #categoryBtn{
+	background-image:url(../../img/ico_category.png);
+}
