--- a/sets/meridiani_cinesi/stili.css
+++ b/sets/meridiani_cinesi/stili.css
@@ -783,10 +783,10 @@ body:not(.smart) #meridianiSmart_cont div:not(.elencoSel):hover{
 	padding-right:4px !important;
 }
 #pat_ricerca,
-#labelApparati{
+#labelSequenze{
     width: calc(var(--menu-width) - 44px);
 }
-#labelApparati{
+#labelSequenze{
 	display: inline-block;
     vertical-align: middle;
     height: 26px;
