--- a/sets/meridiani_shiatsu/stili.css
+++ b/sets/meridiani_shiatsu/stili.css
@@ -356,7 +356,7 @@ body:not(.bodyStyled1):not(.bodyStyled2):not(.smart) #p_set{
 #e_NK{
 	padding-top:5px;
 }
-.labelApparato{
+.labelSequenza{
 	display: block;
     width: 100%;
     height: 36px !important;
@@ -380,24 +380,29 @@ body:not(.bodyStyled1):not(.bodyStyled2):not(.smart) #p_set{
 	cursor:pointer;
 	margin-bottom:5px !important;
 }
-.apparati_nmk:not(.vis_apparati) .labelApparato:hover{
+.sequenze_nmk:not(.vis_apparati) .labelSequenza:hover{
 	background-image:url(../../img/frGiuB.png), linear-gradient(to bottom, #EEE 0%,#DDD 100%) !important;
 }
-.apparati_nmk:not.vis_apparati .labelApparato:hover{
+.sequenze_nmk:not.vis_apparati .labelSequenza:hover{
 	background-image:url(../../img/frSuB.png), linear-gradient(to bottom, #EEE 0%,#DDD 100%) !important;
 }
-.apparati_nmk{
+.sequenze_nmk{
 	padding-bottom: 10px;
 }
-.apparati_nmk:not(.vis_apparati){
+.sequenze_nmk:not(.vis_apparati){
 	height:40px;
 	overflow:hidden;
 }
-.apparati_nmk.vis_apparati .labelApparato{
+.sequenze_nmk.vis_apparati .labelSequenza{
     background-image: url(../../img/frSuB.png), linear-gradient(to bottom, #FFF 0%,#EEE 100%) !important;
 }
-.apparati_nmk p:not(.labelApparato){
+.sequenze_nmk p:not(.labelSequenza){
 	margin-left:5px;
+}
+.labelSequenzaNMK{
+	display:block;
+	padding:10px 0 5px 5px;
+	color:rgba(255,255,255,0.7);
 }
 #meridianiSmart_cont:not(.onlyCIN) .noMAS,
 #meridianiSmart_cont.onlyNMK > .noNMK,
@@ -1051,10 +1056,10 @@ body.smart #elenchi #cambioSistemaMeridiani{
 	padding-right:4px !important;
 }
 #pat_ricerca,
-#labelApparati{
+#labelSequenze{
     width: calc(var(--menu-width) - 44px);
 }
-#labelApparati{
+#labelSequenze{
 	display: inline-block;
     vertical-align: middle;
     height: 26px;
@@ -1106,4 +1111,78 @@ body.smart #elenchi #cambioSistemaMeridiani{
 }
 .ptsHidden{
 	display:none;
+}
+.dis_ric,
+.dis_prs{
+	/* border-top: 1px solid rgba(0,0,0,0.2); */
+	border-top: 4px dotted rgba(0,0,0,0.1);
+}
+.dis_ric,
+.dis_ter,
+.dis_prs{
+	/* border-top: 1px solid rgba(0,0,0,0.2); */
+	padding-top: 15px;
+	clear:both;
+	margin-top: 20px;
+}
+.dis_ric img,
+.dis_prs img{
+    float: left;
+	margin-right: 10px;
+}
+.dis_ter img{
+    float: right;
+	margin-top:-20px;
+}
+.imgDx{
+	border-radius: 6px;
+    box-shadow: 0px 0px 4px;
+    margin-left: 20px;
+	margin-bottom: 20px;
+    width: 167px;
+    float: right;
+}
+.dis_ter img,
+.dis_prs img{
+    margin-bottom: 15px;
+}
+.dis_ric img{
+    height: 92px;
+}
+.dis_ter img{
+    height: 86px;
+}
+.dis_prs img{
+    height: 87px;
+}
+.btTeo{
+	font-size: var(--font-14-94);
+	background-image: url(../../img/frGiuB.png);
+	background-position: right center;
+	background-repeat: no-repeat;
+	background-size: contain;
+	cursor:pointer;
+	height:40px;
+	line-height:40px;
+	display:block;
+	margin:0px;
+	border-top:1px solid rgba(0,0,0,0.1);
+}
+.btTeo.szVis{
+	background-image: url(../../img/frSuB.png) !important;
+}
+.szTeo:not(.szVis){
+	display:none;
+}
+.imgTecnica{
+    height: 84px;
+    float: right;
+    margin-left: 10px;
+}
+.szDiv{
+	border-bottom:1px solid rgba(0,0,0,0.1);
+	min-height:90px;
+}
+.titSezTeo{
+	font-size: var(--font-16-5);
 }
