--- a/sets/meridiani_shiatsu/stili.css
+++ b/sets/meridiani_shiatsu/stili.css
@@ -1186,3 +1186,22 @@ body.smart #elenchi #cambioSistemaMeridiani{
 .titSezTeo{
 	font-size: var(--font-16-5);
 }
+#legendaNMK{
+	line-height: 28px;
+	margin:0;
+	height:auto;
+	color:#FFF;
+	background-color: rgba(0,0,0,0.1);
+    border-radius: 6px;
+    padding: 10px;
+    margin-top: 20px;
+}
+#legendaNMK img{
+	vertical-align:middle;
+	width:52px;
+	margin-right:5px;
+}
+#legendaNMK i.labelSequenzaNMK{
+	padding-top: 0px;
+	padding-left: 10px;
+}
