WIP traduzioni SM

--- a/sets/meridiani_shiatsu/stili.css
+++ b/sets/meridiani_shiatsu/stili.css
@@ -1225,3 +1225,7 @@ body.smart #elenchi #cambioSistemaMeridiani{
 	padding-top: 0px;
 	padding-left: 10px;
 }
+.authProt{
+	font-style:italic;
+	margin-top:0px;
+}
