--- a/sets/auricologia/stili.css
+++ b/sets/auricologia/stili.css
@@ -2,8 +2,8 @@
 /* CSS Document */
 
 .impSet{
-    height: 230px !important;
-    margin-top: -115px !important;
+    height: 230px;
+    margin-top: -115px;
 }
 
 #pulsante_modello{
