--- a/css/forms.css
+++ b/css/forms.css
@@ -597,6 +597,15 @@ body.bodyModello .p_paz_screenshot:hover{ /* PAZIENTI */
 	padding-right:10px;
 	margin:7px;
 	box-shadow:0px 0px 2px rgba(0,0,0,0.4);
+	overflow: hidden;
+}
+.sezioneTrattamenti .tsb,
+.sezioneTrattamenti .tag,
+.sezioneTrattamenti .medicina,
+.sezioneTrattamenti .allergia,
+.sezioneTrattamenti .patologia,
+.sezioneTrattamenti .intervento{
+	max-width: calc(100% - 52px);
 }
 
 .smart.android .tsb,
@@ -1230,6 +1239,10 @@ cont_p_paz_label{
 	padding-right: 5px;
 	font-style:italic;
 	color:#000;
+	/* display: block; */
+}
+#formMod em,  /* PAZIENTI */
+.sezioneTrattamenti em{  /* PAZIENTI */
 	display: block;
 }
 #rgProcMod #formMod i{
