--- a/css/manichino.css
+++ b/css/manichino.css
@@ -240,6 +240,8 @@
 .dettaglioAnatomia{
 	float: right;
     margin: -30px;
+    position: relative;
+    z-index: 0;
 }
 .bodyStyled2 .dettaglioAnatomia{
     background-blend-mode: multiply;
@@ -248,6 +250,10 @@
 }
 .dettaglioAnatomia img{
 	opacity:0;
+}
+.descrAnatomia{
+    position: relative;
+    z-index: 1;
 }
 @media (min-width: 700px){
 	.descrAnatomia{
